# advent_of_code_2023

./: .gitignore  README.md  dune-project
_build/: .db  .digest-db  log
_build/default/: README.md  advent_of_code_2023.dune-package
_build/default/.dune/: configurator  configurator.v2
_build/default/day1/: main.ml
_build/default/day1/.main.eobjs/byte/: dune__exe__Main.cmti
_build/default/day1/.main.eobjs/native/: dune__exe__Main.cmx
_build/default/day1/.merlin-conf/: exe-main
_build/default/live_example_2022/.main.eobjs/byte/: dune__exe__Main.cmti
_build/default/live_example_2022/.main.eobjs/native/: dune__exe__Main.cmx
_build/default/live_example_2022/.merlin-conf/: exe-main
_build/default/my_example_2022/: main.ml
_build/default/my_example_2022/.main.eobjs/byte/: dune__exe__Main.cmti
_build/default/my_example_2022/.merlin-conf/: exe-main
_build/install/default/lib/advent_of_code_2023/: opam
day01/: dune
day02/: main.ml
day03/: main.ml
day04/: main.ml
day05/: main.ml
day06/: main.ml
day07/: main.ml
day08/: main.ml
day09/: main.ml
day1/: dune  main.ml
day10/: main.ml
day11/: main.ml
day12/: main.ml
day13/: main.ml
day15/: main.ml
day16/: main.ml
day18/: main.ml
day19/: main.ml
live_example_2022/: main.ml
