(lang dune 3.6)

(name advent_of_code_2023)

(generate_opam_files true)

(authors "jpw234")

(maintainers "jpw234")

(license MIT)

(package
 (name advent_of_code_2023)
 (synopsis "Advent Of Code 2023 in OCaml")
 (description "Solving Advent of Code 2023 in OCaml")
 (depends ocaml dune core)
 (tags
  (aoc aoc-2023 ocaml)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project